--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ exclude = ["screenshots/*"]
 parking_lot = "0.8.0"
 regex = "1"
 lazy_static = "1"
+log = { version = "0.4", features = ["std"] }
 number_prefix = "0.3"
 console = ">=0.7.5, <1.0.0"
 rayon = { version = "1.0", optional = true }
