--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ exclude = ["screenshots/*"]
 parking_lot = "0"
 regex = "1"
 lazy_static = "1"
+log = { version = "0.4", features = ["std"] }
 number_prefix = "0.2"
 console = ">=0.7.1, <1.0.0"
 
